# align

./: .env  .flaskenv  .gitignore  FAQ.md  LICENSE  README-vscode.md  README.md  TUTORIAL.md  amazon.py  create.sql  init.sh  init_amazon.sh  install.sh  package-lock.json  pyproject.toml  reload_database.sh  requirements.txt
app/: __init__.py  config.py  db.py  passwords.py  users.py
app/models/: cart.py  inventory.py  product.py  purchase.py  review.py  user.py
app/routes/: __init__.py  forms.py  index.py  inventory.py  models.py  users.py
app/routes/templates/: base.html  index.html  login.html  register.html
app/templates/: base.html  index.html
backend/: .gitignore  TUTORIAL.md  align.py  install.sh  pyproject.toml
backend/app/: __init__.py
backend/app/controllers/: image_controller.py  index.py  label_controller.py  leaderboard_controller.py  project_controller.py  projects.py  role_controller.py  user_controller.py  users.py
backend/app/models/: image.py  label.py  payment.py  project.py  purchase.py  role.py  user.py
backend/db/: create.sql  load.sql  setup.sh
backend/db/data/: Images.csv  Payments.csv  Projects.csv  Purchases.csv  Roles.csv  Users.csv
db/: create.sql  load.sql  setup.sh
frontend/: .env  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  accessControl.tsx  main.tsx
frontend/src/components/: AddCard.tsx  AuthRoute.tsx  CardList.tsx  ClickableOpacity.tsx  FilterBar.tsx  FlexColumn.tsx  FlexRow.tsx  Header.tsx  ImageCard.tsx  LabelList.tsx  PaymentList.tsx  ProjectCard.tsx  Spacing.tsx  (+2 more)
(+22 files in other folders)
